--- a/bloque_2/spring_web/web_ejem8b/pom.xml
+++ b/bloque_2/spring_web/web_ejem8b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.urjc.code</groupId>
-	<artifactId>web_ejem8</artifactId>
+	<artifactId>web_ejem8b</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
